# nolang_bot

./: .clasp.json  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  embed.py  loader.py  metadata.json  package-lock.json  package.json  pyproject.toml  server.py  setup.py  test_cli.py  tsconfig.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
clasp/cs_support/: .clasp.json
clasp/cs_support/src/: updateTicket.js
clasp/form/: .clasp.json
clasp/form/src/: onFormSubmit.js  onFormSubmitForSheet.js
docs/: developer-guide.md  development-plan.md
src/: embed.py  loader.py  server.py  setup.py  test_cli.py
ts/: TicketsForm.ts  backfillTicketsFromForms.ts  logInboxEmails.ts  onFormSubmit.ts  updateContactMessage.ts  updateTicket.ts  uploadMessagesToDifyAsCsv.ts
ts/config/: constants.ts
